      (thanks to K.H. Fiebig)
    * lnx_bonding: new check for checking bonding interfaces on Linux

    Multisite:
    * Added comment painter to notification related views

    BI:
    * Use Ajax to delay rendering of invisible parts of the tree (this
      saves lots of HTML code)

    WATO:
    * Added hr_mem check to the memory checkgroup to make it configurable in WATO
    * FIX: Fixed some typos in ldap error messages
    * FIX: Fixed problem on user profile page when no alias set for a user
    * FIX: list valuespecs could not be extended after once saving
    * FIX: fix title of foldable areas contained in list valuespecs
    * FIX: Fixed bug where pending log was not removed in multisite setup
    * Make page_header configurable in global settings

    Event Console:
    * Added UNIX socket for sending events to the EC
    * Speed up rule matches in some special cases by factor of 100 and more
    * Init-Script: Improved handling of stale pidfiles
    * Init-Script: Detecting and reporting already running processes

1.2.1i5:
    Core:
    * Improved handling of CTRL+C (SIGINT) to terminate long runnining tasks 
      (e.g.  inventory of SNMP hosts)
    * FIX: PING services on clusters are treated like the host check of clusters
    * cmk --notify: new environment variable NOTIFY_WHAT which has HOST or SERVICE as value
    * cmk --notify: removing service related envvars in case of host notifications
    * cmk --notify: added test code to help developing nitofication plugins.
      Can be called with "cmk --notify fake-service debug" for example

    Checks & Agents:
    * Linux Agent, diskstat: Now supporting /dev/emcpower* devices (Thanks to Claas Rockmann-Buchterkirche)
    * FIX: winperf_processor: Showing 0% on "cmk -nv" now instead of 100%
    * FIX: win_dhcp_pools: removed faulty output on non-german windows 2003 servers 
           with no dhcp server installed (Thanks to Mathias Decker)