@@ -28,6 +28,24 @@ import config, sys
 
 hooks = {}
 
+# Datastructures and functions needed before plugins can be loaded
+loaded_with_language = False
+
+# Load all login plugins
+def load_plugins():
+    global loaded_with_language
+    if loaded_with_language == current_language:
+        return
+
+    # Cleanup all registered hooks. They need to be renewed by load_plugins()
+    # of the other modules
+    unregister()
+
+    # This must be set after plugin loading to make broken plugins raise
+    # exceptions all the time and not only the first time (when the plugins
+    # are loaded).
+    loaded_with_language = current_language
+
 def unregister():
     global hooks
     hooks = {}
